--- a/assets/css/scss/_common.scss
+++ b/assets/css/scss/_common.scss
@@ -2,6 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
+.sp-br{
+  display: none;
+  @include w599{
+    display: block;
+  }
+}
+
 .sec-title__p {
   color: #7e8387;
   font-weight: bold;
@@ -40,10 +47,12 @@ img {
     padding-top: 100px;
   }
   @include w768{
-    padding-top: 80px;
+    padding-top: 100px;
   }
   @include w450 {
     padding-left: 40px;
+    padding-right: 20px;
+    padding-top: 100px;
   }
   h2 {
     font-size: 72px;
@@ -60,6 +69,7 @@ img {
     }
     @include w500 {
       font-size: 42px;
+      line-height: 1.2;
     }
   }
   p {
@@ -71,6 +81,7 @@ img {
     }
     @include w660 {
       font-size: 18px;
+      margin-top: 8px;
     }
   }
 }
@@ -102,4 +113,119 @@ img {
 .animoShine:hover::after {
   transition: transform 0.45s ease-in-out;
   transform: translate3d(200%, 0, 0) rotate(35deg);
+}
+
+.page_top_btn {
+  position: fixed;
+  right: 3%;
+  bottom: 5%;
+  z-index: 99999;
+  width: 60px;
+  height: 56px;
+  color: transparent;
+  border: none;
+  background: #419438;
+  box-shadow: 2px 2px 2px 1px rgba(57, 56, 56, 0.8), 0 0 0 2px #419438;
+  background-image: url('/wp-content/themes/DreamSolution/assets/image/page_top_btn.png');
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.6s;
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
+    background-color: #419438;
+    box-shadow: none;
+  }
+  @include w599 {
+    width: 40px;
+    height: 38px;
+  }
+}
+
+.scrolled .page_top_btn {
+  display: block;
+  opacity: 1;
+}
+
+//アニメーション
+
+//フェードアップ
+.fade-up {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+.fade-up_d {
+  opacity: 1;
+  transform: translateY(0px);
+}
+//フェードイン
+.fade-in {
+  opacity: 0; /* 最初は透明にする */
+  animation: fadeIn 1s ease-in 0.5s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; /* 開始時は透明 */
+  }
+  to {
+    opacity: 1; /* 終了時は不透明 */
+  }
+}
+//フェードアップ2
+.fade-up2 {
+  opacity: 0; /* 最初は透明にする */
+  animation: fadeUp 1s ease-in 0.5s forwards;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0; /* 開始時は透明 */
+    transform: translateY(40px); /* 下方向に20ピクセル移動 */
+  }
+  to {
+    opacity: 1; /* 終了時は不透明 */
+    transform: translateY(0); /* 移動なし */
+  }
+}
+
+//フェードイン アバウトページキャッチ
+.fade-in-about{
+  opacity: 0; /* 最初は透明にする */
+  animation: fadeIn 1.2s ease-in 1.6s forwards;
+}
+
+//フェードレフト
+.fade-left {
+  opacity: 0; /* 最初は透明にする */
+  animation: fadeLeft 1s ease-in 0.5s forwards;
+}
+
+@keyframes fadeLeft {
+  from {
+    opacity: 0; /* 開始時は透明 */
+    transform: translateX(-40px); /* 下方向に20ピクセル移動 */
+  }
+  to {
+    opacity: 1; /* 終了時は不透明 */
+    transform: translateX(0); /* 移動なし */
+  }
+}
+
+//ぽよぽよ
+.poyopoyo {
+  animation: poyopoyo 2s ease-out infinite;
+  opacity: 1;
+}
+@keyframes poyopoyo {
+  0%, 40%, 60%, 80% {
+    transform: scale(1.0);
+  }
+  50%, 70% {
+    transform: scale(1.05);
+  }
 }
