--- a/assets/css/scss/_dream-call.scss
+++ b/assets/css/scss/_dream-call.scss
@@ -5,9 +5,21 @@
   width: 100%;
   height: 680px;
   position: relative;
+  @include w599{
+    height: 580px;
+  }
   img {
     object-position: top;
+    @include w1024{
+    position: absolute;
+    right: -160px;
+    width: 130%;
   }
+  @include w599{
+    right: 0;
+    width: 100%;
+  }
+}
   &_content {
     position: absolute;
     top: 20%;
@@ -18,6 +30,12 @@
       font-weight: 700;
       line-height: 1.4;
       text-shadow: 2px 2px 0 rgb(0, 0, 0, 0.2);
+      @include w900{
+        font-size: 20px;
+      }
+      @include w599{
+        font-size: 16px;
+      }
     }
     .banner {
       margin-top: 20px;
@@ -37,6 +55,13 @@
       color: #419438;
       text-shadow: 3px 3px 0 rgb(0, 0, 0, 0.2);
       margin-bottom: 40px;
+      @include w900{
+        font-size: 60px;
+      }
+      @include w599{
+        font-size: 38px;
+        margin-top: 10px;
+      }
     }
     .badge {
       display: flex;
@@ -54,6 +79,9 @@
         p {
           padding: 10px 80px;
           color: #fff;
+          @include w900{
+            padding: 10px 0px;
+          }
         }
       }
     }
@@ -67,10 +95,18 @@
     padding-top: 80px;
     padding-bottom: 80px;
     text-align: center;
+    @include w599{
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
     p {
       font-weight: 700;
       font-size: 24px;
       color: #3a3e40;
+      @include w599{
+        font-size: 20px;
+        margin: 0 20px;
+      }
     }
   }
   &__card {
@@ -80,12 +116,21 @@
       border-radius: 30px;
       display: inline-block;
       padding: 40px 60px;
+      @include w768{
+        padding: 40px 40px;
+      }
+      @include w599{
+        padding: 40px 15px;
+      }
       li {
         display: flex;
         margin-bottom: 16px;
         font-size: 18px;
         font-weight: 700;
         color: #403a3a;
+        @include w599{
+          font-size: 13px;
+        }
         .red {
           color: #ff0000;
         }
@@ -109,16 +154,29 @@
 .step {
   margin-top: 80px;
   margin-bottom: 80px;
+  @include w599{
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
   &__title {
     text-align: center;
     font-weight: 900;
     font-size: 36px;
     color: #419438;
+    @include w768{
+      font-size: 28px;
+    }
+    @include w599{
+      font-size: 24px;
+    }
   }
   &__img {
     margin: 0 auto;
     margin-top: 20px;
     width: 60%;
+    @include w768{
+      width: 80%;
+    }
   }
 }
 
@@ -132,17 +190,30 @@
     color: #3a3e40;
     text-align: center;
     margin-bottom: 40px;
+    @include w599{
+      font-size: 24px;
+      padding-top: 60px;
+    }
   }
   &__item {
     width: 60%;
     margin: 0 auto;
     color: #3a3e40;
     padding-bottom: 60px;
+    @include w768{
+      width: 70%;
+    }
+    @include w599{
+      width: 80%;
+    }
     &_detail {
       font-size: 16px;
       font-weight: 400;
       line-height: 1.4;
       margin-bottom: 28px;
+      @include w599{
+        font-size: 14px;
+      }
     }
 
     &_title {
@@ -152,12 +223,18 @@
       text-align: left;
       padding-bottom: 6px;
       margin-bottom: 16px;
+      @include w599{
+        font-size: 18px;
+      }
     }
     ul {
       margin-left: 28px;
       margin-bottom: 28px;
       line-height: 1.4;
       font-weight: 400;
+      @include w599{
+        font-size: 14px;
+      }
       li {
         list-style: disc;
       }
@@ -172,6 +249,9 @@
         font-size: 18px;
         font-weight: 400;
         margin-left: 16px;
+        @include w599{
+          font-size: 16px;
+        }
       }
       span {
         font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
@@ -187,6 +267,9 @@
       row-gap: 20px;
       margin-top: 28px;
       padding-bottom: 80px;
+      @include w599{
+        padding-bottom: 0;
+      }
     }
     &_other {
       width: 30%;
@@ -194,6 +277,17 @@
       border-radius: 10px;
       padding-left: 20px;
       padding-right: 20px;
+      @include w1024{
+        width: 45%;
+      }
+      @include w768{
+        width: 48%;
+      }
+      @include w599{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
       &_title {
         font-size: 20px;
         text-align: center;
@@ -202,12 +296,18 @@
         color: #419438;
         font-weight: 700;
         border-bottom: 1px solid #419438;
+        @include w599{
+          font-size: 18px;
+        }
       }
       &_detail {
         font-weight: 400;
         line-height: 1.4;
         margin-top: 10px;
         margin-bottom: 10px;
+        @include w599{
+          font-size: 14px;
+        }
       }
     }
   }
@@ -218,6 +318,10 @@
   &__inner {
     padding-top: 80px;
     padding-bottom: 80px;
+    @include w599{
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
   }
   &__title {
     text-align: center;
@@ -225,6 +329,9 @@
     font-weight: 900;
     font-size: 36px;
     margin-bottom: 40px;
+    @include w599{
+      font-size: 24px;
+    }
   }
 
   dl {
@@ -236,17 +343,42 @@
     background: #fff;
     padding: 28px 80px;
     border-bottom: 1px solid #eeeeee;
+    @include w1024{
+      width: 70%;
+    }
+    @include w900{
+      width: 80%;
+      padding: 28px 60px;
+    }
+    @include w768{
+      padding: 28px 40px;
+    }
+    @include w599{
+      align-items: flex-start;
+    flex-direction: column;
+    }
     dt {
       width: 30%;
       color: #7e8387;
       font-weight: 700;
       font-family: "Lato";
+      @include w599{
+        width: 100%;
+        margin-bottom: 10px;
+      }
     }
     dd {
       color: #333;
       line-height: 1.4;
       width: 70%;
       padding-left: 20px;
+      @include w768{
+        font-size: 14px;
+      }
+      @include w599{
+        width: 100%;
+        padding-left: 0;
+      }
     }
   }
 }
@@ -254,11 +386,20 @@
 .trial{
     text-align: center;
     padding-top: 80px;
+    @include w599{
+      padding-top: 60px;
+    }
     p{
         font-weight: 900;
         font-size: 36px;
         line-height: 1.8;
         color: #3A3E40;
+        @include w768{
+          font-size: 30px;
+        }
+        @include w599{
+          font-size: 18px;
+        }
     }
     span{
         margin-top: 20px;
@@ -266,5 +407,8 @@
         font-size: 140px;
         font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
         transform: rotate(270deg);
+        @include w599{
+          font-size: 100px;
+        }
     }
 }
